tests/reference/ast-missing_include_01-8c58b3e.stderr
syntax error: Include file 'does_not_exist.fi' not found. If an include path is available, please use the `-I` option to specify it.
 --> tests/errors/missing_include_01.f90:3:30
  |
3 |   include 'does_not_exist.fi'
  |                              ^ 
